# jpa-codegen-jooq

./: .gitignore  CMakeLists.txt  DEPENDENCY_MANAGEMENT.md  VECTOR_DATABASE_INTEGRATION.md  VECTOR_OPERATIONS_EXAMPLES.md  build.gradle  pom.xml  readme.md  readme_zh.md  settings.gradle  操作使用手册.md
docs/: graph_database_usage.md
docs/cpp/: readme.md  test.md
examples/: age_test.sql
examples/gradle-demo/: HELP.md  build.gradle
examples/gradle-demo/libs/: jpa-codegen-jooq-0.2.0-all.jar.txt
examples/gradle-demo/src/main/java/com/example/gradle_demo/: GradleDemoApplication.java
examples/gradle-demo/src/main/java/com/example/gradle_demo/entity/: Courses.java  Students.java
examples/gradle-demo/src/main/resources/: application.properties
examples/json/: create_table.json  graph_operations.json  insert_batch_data.json  select_table.json  simple_graph_demo.json  train_data.json
examples/maven_demo/: pom.xml
examples/maven_demo/src/main/java/com/example/: DemoApp.java
examples/maven_demo/src/main/java/com/example/entity/: Courses.java  Students.java
examples/maven_demo/src/main/resources/: application.properties
examples/maven_project/: pom.xml
examples/maven_project/src/main/java/com/example/: DemoApp.java
scripts/: build_and_package.bat  build_and_package.sh  copy_dependencies.bat  copy_dependencies.cmake  copy_dependencies.sh  cp_dlls_client.sh  cp_dlls_server.sh  minicache.service.in
src/main/cpp/: CROSS_PLATFORM_BUILD.md
src/main/cpp/client/: cli_main.cpp
src/main/cpp/common/: platform_compat.h
src/main/cpp/conf/: mcs.conf
src/main/cpp/scripts/: stress_test.sh
src/main/cpp/server/: CommandHandler.cpp  CommandHandler.hpp  ConfigParser.cpp  ConfigParser.hpp  DataStore.cpp  DataStore.hpp  RespParser.cpp  RespParser.hpp  TcpServer.cpp  TcpServer.hpp  compatibility_test.cpp  main.cpp
src/main/cpp/server/windows/: unix_compat.h
src/main/java/com/owiseman/cache/client/: MiniCacheClient.java
src/main/java/com/owiseman/jpa/: JpaEntityScannerProcessor.java
src/main/java/com/owiseman/jpa/cache/client/: MiniCacheClient.java
src/main/java/com/owiseman/jpa/model/: ColumnMeta.java  DataRecord.java  DataSourceEnum.java  ForeignKey.java  Index.java  PaginationInfo.java  TableMeta.java
src/main/java/com/owiseman/jpa/util/: AnnotationUtils.java  DSLUtil.java  DataAnalysisUtil.java  DataSyncProducer.java  GraphDatabaseOperation.java  GraphDatabaseUtil.java  JooqDdlGenerator.java  JooqDdlGeneratorUtil.java  JsonDataOperation.java  JsonDataUtil.java  JsonMapBinding.java  JsonMapConverter.java  MapToType.java  PaginationHelper.java  PgVector2DArrayConverter.java  PgVectorArrayConverter.java  ProcessingBar.java  SqlGenerator.java  TabaleAndDataOperation.java  TableAndDataUtil.java  Vector2DBinding.java  VectorBinding.java  VectorDataOperation.java  VectorDataUtil.java
src/main/python/: Fine_tuning.py  requirements.txt
